@startuml

title __SECURITY's Class Diagram__\n

  namespace com.skhatoll.backend {
    namespace security {
      class com.skhatoll.backend.security.JwtFilter {
          {static} - log : Logger
          + JwtFilter()
          # doFilterInternal()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace security {
      class com.skhatoll.backend.security.JwtUtil {
          - expiration : long
          - secretKey : SecretKey
          + JwtUtil()
          + esValido()
          + extraerNombre()
          + generarToken()
          - estaExpirado()
          - extraerClaims()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace security {
      class com.skhatoll.backend.security.LoginRateLimitingFilter {
          {static} ~ BLOCK_DURATION : Duration
          {static} ~ MAX_ATTEMPTS : int
          {static} ~ WINDOW : Duration
          - attempts : Map<String, AttemptTracker>
          {static} - log : Logger
          # doFilterInternal()
          - getClientIp()
          - isLoginRequest()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace security {
      class com.skhatoll.backend.security.LoginRateLimitingFilter.AttemptTracker {
          - blockUntil : long
          - timestamps : ArrayList<Long>
          ~ cleanup()
          ~ isBlocked()
          ~ record()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace security {
      class com.skhatoll.backend.security.UserDetailsServiceImpl {
          + UserDetailsServiceImpl()
          + loadUserByUsername()
      }
    }
  }
  

  com.skhatoll.backend.security.JwtFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  com.skhatoll.backend.security.JwtFilter o-- com.skhatoll.backend.security.JwtUtil : jwtUtil
  com.skhatoll.backend.security.JwtFilter o-- com.skhatoll.backend.security.UserDetailsServiceImpl : userDetailsService
  com.skhatoll.backend.security.LoginRateLimitingFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  com.skhatoll.backend.security.LoginRateLimitingFilter +-down- com.skhatoll.backend.security.LoginRateLimitingFilter.AttemptTracker
  com.skhatoll.backend.security.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.skhatoll.backend.security.UserDetailsServiceImpl o-- com.skhatoll.backend.repository.UsuarioRepository : usuarioRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
